FS-729: Alter test to use DM checker for DM Static Migration testing.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -163,16 +163,26 @@ state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2
 
-#[scenario_5]
-# Check DM Static Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node2,volume_smoke1
-
 # Boot and activate a third node.
-[scenario_6_1]
+[scenario_5_1]
 script          = [node3]
+action          = bootup
+delay_wait      = 10
+
+[scenario_5_2]
+script          = [activate]
+delay_wait      = 10
+
+[scenario_5_3]
+# Verify nodes node1, 2, and 3 are up
+script          = [verify]
+state           = up
+# Comma separated list of nodes.
+fds_nodes       = node1,node2,node3
+
+# Boot and activate a fourth node.
+[scenario_6_1]
+script          = [node4]
 action          = bootup
 delay_wait      = 10
 
@@ -181,65 +191,13 @@ script          = [activate]
 delay_wait      = 10
 
 [scenario_6_3]
-# Verify nodes node1, 2, and 3 are up
-script          = [verify]
-state           = up
-# Comma separated list of nodes.
-fds_nodes       = node1,node2,node3
-
-#[scenario_7_1]
-## Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node2,volume_smoke1
-
-#[scenario_7_2]
-## Check Static DMT Migration from node1 to node3.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node3,volume_smoke1
-
-# Boot and activate a fourth node.
-[scenario_8_1]
-script          = [node4]
-action          = bootup
-delay_wait      = 10
-
-[scenario_8_2]
-script          = [activate]
-delay_wait      = 10
-
-[scenario_8_3]
 # Verify nodes node1, 2, 3, and 4 are up
 script          = [verify]
 state           = up
 # Comma separated list of nodes.
 fds_nodes       = node1,node2,node3,node4
 
-#[scenario_9_1]
-# Check Static DMT Migration from node1 to node2.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node2,volume_smoke1
-
-#[scenario_9_2]
-## Check Static DMT Migration from node1 to node3.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node3,volume_smoke1
-
-#[scenario_9_3]
-## Check Static DMT Migration from node1 to node4.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node4,volume_smoke1
-
-[scenario_a]
+[scenario_7]
 # Verify nodes node1, 2, 3, and 4 are up
 script          = [verify]
 state           = up
@@ -247,67 +205,89 @@ state           = up
 fds_nodes       = node1,node2,node3,node4
 
 # Remove from the cluster and shutdown the fourth node.
-[scenario_b_1]
+[scenario_8_1]
 script          = [node4]
 action          = remove
 delay_wait      = 10
 
-[scenario_b_2]
+[scenario_8_2]
 script          = [node4]
 action          = shutdown
 
 # Now the third node.
-[scenario_c_1]
+[scenario_9_1]
 script          = [node3]
 action          = remove
 delay_wait      = 10
 
-[scenario_c_2]
+[scenario_9_2]
 script          = [node3]
 action          = shutdown
 
 # The second node.
-[scenario_d_1]
+[scenario_a_1]
 script          = [node2]
 action          = remove
 delay_wait      = 10
 
-[scenario_d_2]
+[scenario_a_2]
 script          = [node2]
 action          = shutdown
 
 # Finally the first node.
-[scenario_e_1]
+[scenario_b_1]
 script          = [node1]
 action          = remove
 delay_wait      = 10
 
-[scenario_e_2]
+[scenario_b_2]
 script          = [node1]
 action          = shutdown
 
-# Before we cleanup the installation areas, let's run the SM Checker.
+# Before we cleanup the installation areas, let's run the D and SMM Checkers.
 # We do it here since the check utility requires that the cluster
 # be down (by default, anyway).
-[scenario_f]
+
+#[scenario_c_1]
+# Check DM Static Migration from node1 to node2.
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node2,volume_smoke1
+
+#[scenario_c_2]
+## Check DM Static Migration from node1 to node3.
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node3,volume_smoke1
+
+#[scenario_c_3]
+## Check DM Static Migration from node1 to node4.
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
+## Command separated list of parameter names and values
+#param_names     = node1,node2,volume
+#params          = node1,node4,volume_smoke1
+
+[scenario_d]
 # Check SM consistency.
 script          = [testcases.TestFDSSysVerify.TestVerifySMConsistency]
 # Command separated list of parameter names and values
 
 # Now clean up installation areas.
-#[scenario_g_1]
+#[scenario_e_1]
 #script          = [node4]
 #action          = cleaninst
 
-#[scenario_g_2]
+#[scenario_e_2]
 #script          = [node3]
 #action          = cleaninst
 
-#[scenario_g_3]
+#[scenario_e_3]
 #script          = [node2]
 #action          = cleaninst
 
-#[scenario_g_4]
+#[scenario_e_4]
 #script          = [node1]
 #action          = cleaninst
 
