fix removal of old debs

--- a/ansible/tasks/deploy_fds/install_deps.yml
+++ b/ansible/tasks/deploy_fds/install_deps.yml
@@ -119,10 +119,8 @@
       - install-local
 
 -   name: delete local debs from /root/ to avoid conflict
-    file: path=/root/{{ item }}
+    file: path=/root/fds-deps.deb
         state=absent
-    with_fileglob:
-      - 'fds-deps.deb'
     when: deploy_artifact == "local"
     tags:
       - install-local
