FS-729: Make smchk work like dmchk in that both will now report results to stdout which may be more easily checked by a test framework than a log file.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -205,40 +205,40 @@ state           = up
 fds_nodes       = node1,node2,node3,node4
 
 # Remove from the cluster and shutdown the fourth node.
-[scenario_8_1]
-script          = [node4]
-action          = remove
-delay_wait      = 10
+#[scenario_8_1]
+#script          = [node4]
+#action          = remove
+#delay_wait      = 10
 
 [scenario_8_2]
 script          = [node4]
 action          = shutdown
 
 # Now the third node.
-[scenario_9_1]
-script          = [node3]
-action          = remove
-delay_wait      = 10
+#[scenario_9_1]
+#script          = [node3]
+#action          = remove
+#delay_wait      = 10
 
 [scenario_9_2]
 script          = [node3]
 action          = shutdown
 
 # The second node.
-[scenario_a_1]
-script          = [node2]
-action          = remove
-delay_wait      = 10
+#[scenario_a_1]
+#script          = [node2]
+#action          = remove
+#delay_wait      = 10
 
 [scenario_a_2]
 script          = [node2]
 action          = shutdown
 
 # Finally the first node.
-[scenario_b_1]
-script          = [node1]
-action          = remove
-delay_wait      = 10
+#[scenario_b_1]
+#script          = [node1]
+#action          = remove
+#delay_wait      = 10
 
 [scenario_b_2]
 script          = [node1]
@@ -248,48 +248,65 @@ action          = shutdown
 # We do it here since the check utility requires that the cluster
 # be down (by default, anyway).
 
-#[scenario_c_1]
+[scenario_c_1]
 # Check DM Static Migration from node1 to node2.
 script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node2,volume_smoke1
+# Command separated list of parameter names and values
+param_names     = node1,node2,volume
+params          = node1,node2,volume_smoke1
 
-#[scenario_c_2]
+[scenario_c_2]
 ## Check DM Static Migration from node1 to node3.
 script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node3,volume_smoke1
-
-#[scenario_c_3]
-## Check DM Static Migration from node1 to node4.
-script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-## Command separated list of parameter names and values
-#param_names     = node1,node2,volume
-#params          = node1,node4,volume_smoke1
-
-[scenario_d]
-# Check SM consistency.
-script          = [testcases.TestFDSSysVerify.TestVerifySMConsistency]
 # Command separated list of parameter names and values
+param_names     = node1,node2,volume
+params          = node1,node3,volume_smoke1
+
+[scenario_c_3]
+# Check DM Static Migration from node1 to node4.
+script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
+# Command separated list of parameter names and values
+param_names     = node1,node2,volume
+params          = node1,node4,volume_smoke1
+
+[scenario_d_1]
+# Check SM Static Migration from node1 to node2.
+script          = [testcases.TestFDSSysVerify.TestVerifySMStaticMigration]
+# Command separated list of parameter names and values
+# We'll go ahead with this one even if previous test cases have failed.
+param_names     = node1,node2,skip
+params          = node1,node2,False
+
+[scenario_d_2]
+# Check SM Static Migration from node1 to node3.
+script          = [testcases.TestFDSSysVerify.TestVerifySMStaticMigration]
+# Command separated list of parameter names and values
+param_names     = node1,node2
+params          = node1,node3
+
+[scenario_d_3]
+# Check SM Static Migration from node1 to node4.
+script          = [testcases.TestFDSSysVerify.TestVerifySMStaticMigration]
+# Command separated list of parameter names and values
+param_names     = node1,node2
+params          = node1,node4
 
 # Now clean up installation areas.
-#[scenario_e_1]
-#script          = [node4]
-#action          = cleaninst
+[scenario_e_1]
+script          = [node4]
+action          = cleaninst
 
-#[scenario_e_2]
-#script          = [node3]
-#action          = cleaninst
+[scenario_e_2]
+script          = [node3]
+action          = cleaninst
 
-#[scenario_e_3]
-#script          = [node2]
-#action          = cleaninst
+[scenario_e_3]
+script          = [node2]
+action          = cleaninst
 
-#[scenario_e_4]
-#script          = [node1]
-#action          = cleaninst
+[scenario_e_4]
+script          = [node1]
+action          = cleaninst
 
 
 
