--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -194,53 +194,26 @@ delay_wait      = 10
 # Verify nodes node1, 2, 3, and 4 are up
 script          = [verify]
 state           = up
-# Comma separated list of nodes.
+# Comma separated list of nodes. No white space, please.
 fds_nodes       = node1,node2,node3,node4
 
-[scenario_7]
-# Verify nodes node1, 2, 3, and 4 are up
-script          = [verify]
-state           = up
-# Comma separated list of nodes.
-fds_nodes       = node1,node2,node3,node4
-
-# Remove from the cluster and shutdown the fourth node.
-#[scenario_8_1]
-#script          = [node4]
-#action          = remove
-#delay_wait      = 10
-
-[scenario_8_2]
+# Shutdown the fourth node.
+[scenario_7_1]
 script          = [node4]
 action          = shutdown
 
 # Now the third node.
-#[scenario_9_1]
-#script          = [node3]
-#action          = remove
-#delay_wait      = 10
-
-[scenario_9_2]
+[scenario_7_2]
 script          = [node3]
 action          = shutdown
 
 # The second node.
-#[scenario_a_1]
-#script          = [node2]
-#action          = remove
-#delay_wait      = 10
-
-[scenario_a_2]
+[scenario_7_3]
 script          = [node2]
 action          = shutdown
 
 # Finally the first node.
-#[scenario_b_1]
-#script          = [node1]
-#action          = remove
-#delay_wait      = 10
-
-[scenario_b_2]
+[scenario_7_4]
 script          = [node1]
 action          = shutdown
 
@@ -248,63 +221,63 @@ action          = shutdown
 # We do it here since the check utility requires that the cluster
 # be down (by default, anyway).
 
-[scenario_c_1]
+[scenario_8_1]
 # Check DM Static Migration from node1 to node2.
 script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-# Command separated list of parameter names and values
+# Comma separated list of parameter names and values. No white space, please.
 param_names     = node1,node2,volume
 params          = node1,node2,volume_smoke1
 
-[scenario_c_2]
+[scenario_8_2]
 ## Check DM Static Migration from node1 to node3.
 script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-# Command separated list of parameter names and values
+# Comma separated list of parameter names and values. No white space, please.
 param_names     = node1,node2,volume
 params          = node1,node3,volume_smoke1
 
-[scenario_c_3]
+[scenario_8_3]
 # Check DM Static Migration from node1 to node4.
 script          = [testcases.TestFDSSysVerify.TestVerifyDMStaticMigration]
-# Command separated list of parameter names and values
+# Comma separated list of parameter names and values. No white space, please.
 param_names     = node1,node2,volume
 params          = node1,node4,volume_smoke1
 
-[scenario_d_1]
+[scenario_9_1]
 # Check SM Static Migration from node1 to node2.
 script          = [testcases.TestFDSSysVerify.TestVerifySMStaticMigration]
-# Command separated list of parameter names and values
+# Comma separated list of parameter names and values. No white space, please.
 # We'll go ahead with this one even if previous test cases have failed.
 param_names     = node1,node2,skip
 params          = node1,node2,False
 
-[scenario_d_2]
+[scenario_9_2]
 # Check SM Static Migration from node1 to node3.
 script          = [testcases.TestFDSSysVerify.TestVerifySMStaticMigration]
-# Command separated list of parameter names and values
+# Comma separated list of parameter names and values. No white space, please.
 param_names     = node1,node2
 params          = node1,node3
 
-[scenario_d_3]
+[scenario_9_3]
 # Check SM Static Migration from node1 to node4.
 script          = [testcases.TestFDSSysVerify.TestVerifySMStaticMigration]
-# Command separated list of parameter names and values
+# Comma separated list of parameter names and values. No white space, please.
 param_names     = node1,node2
 params          = node1,node4
 
 # Now clean up installation areas.
-[scenario_e_1]
+[scenario_a_1]
 script          = [node4]
 action          = cleaninst
 
-[scenario_e_2]
+[scenario_a_2]
 script          = [node3]
 action          = cleaninst
 
-[scenario_e_3]
+[scenario_a_3]
 script          = [node2]
 action          = cleaninst
 
-[scenario_e_4]
+[scenario_a_4]
 script          = [node1]
 action          = cleaninst
 
