Fix versioning to be consistent across release & debug builds - both builds now use same versioning, if BUILD_NUMBER is available   (jenkins) then that is used, otherwise substring of git head sha - scripts now exit w/ non-zero on failure - whitespace cleanup

--- a/source/tools/install/pkg-release/Makefile
+++ b/source/tools/install/pkg-release/Makefile
@@ -16,11 +16,11 @@ package:
 	#  depending on the context
 	#  Otherwise, defaults to old behavior of assuming you want
 	#  "release" package versioning (x.y.z)
-	@if [ "x${release-build}" = "xfalse" ]; then \
-		fdspkgcreate ; \
-	else \
-		sudo fdspkgcreate -r ; \
-	fi
+ifneq "x$(release-build)" "xfalse"
+	../../package/fds-pkg-create.py
+else
+	sudo ../../package/fds-pkg-create.py -r
+endif
 
 # -----------------------------------------------------------------------------
 # Keep track of where all relevant ansible files live
