FS-729-beefup: Add a useful comment to the FDS Scenario config.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -2,7 +2,12 @@
 # Copyright 2015 Formation Data Systems, Inc.
 #
 # Defines resource, configuration and steps to test
-# Static Migration
+# Static Migration.
+#
+# To enable SM Static Migration, you'll have to set
+# fds.sm.migration.enable_feature to "true" in the file
+# used as a template to build platform.conf's for the test.
+# Namely, .../source/config/etc/platform.conf.
 #
 # Note: Do not embed white space is comma delimited lists - test framework bug.
 
