FS-794: Helper function fds::metadata::diff(...)

--- a/source/stor-mgr/smlib/Makefile
+++ b/source/stor-mgr/smlib/Makefile
@@ -26,9 +26,10 @@ user_cpp          :=                   \
     SMSvcHandler.cpp                   \
     MockSMCallbacks.cpp                \
     TokenMigrationMgr.cpp              \
-	MigrationExecutor.cpp 			   \
-	MigrationClient.cpp 			   \
-	MigrationUtility.cpp 			   
+    MigrationExecutor.cpp              \
+    MigrationClient.cpp                \
+    MigrationUtility.cpp               \
+    MigrationTools.cpp
 
 user_ar_libs      := fds-smlib
 fds-smlib         := $(user_cpp)
