--- a/source/unit-test/stor-mgr/Makefile
+++ b/source/unit-test/stor-mgr/Makefile
@@ -20,7 +20,8 @@ user_cpp          := \
     sm_token_state_gtest.cpp     \
     sm_tier_migration_gtest.cpp  \
     sm_token_migration_gtest.cpp \
-    sm_token_migration_seqnum_gtest.cpp 
+    sm_token_migration_seqnum_gtest.cpp \
+    sm_token_snapshot_delta_gtest.cpp
 
 user_no_style     :=
 
@@ -37,7 +38,8 @@ user_bin_exe      := \
     sm_token_state_gtest  \
     sm_tier_migration_gtest \
     sm_token_migration_gtest \
-    sm_token_migration_seqnum_gtest
+    sm_token_migration_seqnum_gtest \
+    sm_token_snapshot_delta_gtest
 
 
 sm_objectstore_gtest   := object_store_unit_test.cpp
@@ -53,5 +55,6 @@ sm_token_state_gtest  := sm_token_state_gtest.cpp
 sm_tier_migration_gtest := sm_tier_migration_gtest.cpp
 sm_token_migration_gtest := sm_token_migration_gtest.cpp
 sm_token_migration_seqnum_gtest := sm_token_migration_seqnum_gtest.cpp 
+sm_token_snapshot_delta_gtest := sm_token_snapshot_delta_gtest.cpp
 
 include $(test_topdir)/Makefile.sm
