Add retry to fdsadmin status - When deploying FDS we start AMagent using platformd now which   sometimes takes longer than fds-tool takes to return. This causes ansible to check status too soon and fail. This adds a retry loop to wait up to 60 seconds for am to start.

--- a/ansible/tasks/deploy_fds/start_fds.yml
+++ b/ansible/tasks/deploy_fds/start_fds.yml
@@ -58,10 +58,13 @@
         - startup
 
 -   name: check process status
-    command: ./fdsadmin -f deploy_formation.conf --monitor --quiet
+    action: shell ./fdsadmin -f deploy_formation.conf --monitor --quiet
         chdir=/fds/sbin
     register: fdsadmin_output
     when: fds_om_host is defined and fds_om_host == inventory_hostname
+    until: fdsadmin_output|success
+    retries: 5
+    delay: 10
     tags:
         - startup
         - status
