--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -135,8 +135,8 @@ delay_wait      = 10
 
 [scenario_0_3]
 # Activate the cluster as currently defined.
-script          = [activate]
-delay_wait      = 10
+script          = [cluster]
+action          = activate
 
 [scenario_0_4]
 # Verify node node1 is up
@@ -213,8 +213,8 @@ action          = bootup
 delay_wait      = 10
 
 [scenario_4_2]
-script          = [activate]
-delay_wait      = 10
+script          = [cluster]
+action          = activate
 
 [scenario_4_3]
 # Verify nodes node1 and 2 are up
@@ -230,8 +230,8 @@ action          = bootup
 delay_wait      = 10
 
 [scenario_5_2]
-script          = [activate]
-delay_wait      = 10
+script          = [cluster]
+action          = activate
 
 [scenario_5_3]
 # Verify nodes node1, 2, and 3 are up
@@ -247,8 +247,8 @@ action          = bootup
 delay_wait      = 10
 
 [scenario_6_2]
-script          = [activate]
-delay_wait      = 10
+script          = [cluster]
+action          = activate
 
 [scenario_6_3]
 # Verify nodes node1, 2, 3, and 4 are up
