FS-822-II: Corrections from review.

--- a/source/test/cfg/StaticMigration.cfg
+++ b/source/test/cfg/StaticMigration.cfg
@@ -159,7 +159,7 @@ delay_wait      = 10
 
 [scenario_2_2]
 # Attach volume volume1
-script          = [volume_smoke1]
+script          = [volume1]
 action          = attach
 
 [scenario_2_3]
@@ -170,7 +170,7 @@ delay_wait      = 10
 
 [scenario_2_4]
 # Attach volume volume2
-script          = [volume_smoke2]
+script          = [volume2]
 action          = attach
 
 [scenario_2_5]
@@ -181,7 +181,7 @@ delay_wait      = 10
 
 [scenario_2_6]
 # Attach volume volume3
-script          = [volume_smoke3]
+script          = [volume3]
 action          = attach
 
 [scenario_3_1]
