--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -318,6 +318,11 @@
             <artifactId>gson</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+        	<groupId>com.codepoetics</groupId>
+        	<artifactId>protonpack</artifactId>
+        	<version>1.0</version>
+        </dependency>
     </dependencies>
     <!--mvn -f distrib.xml -DskipTests clean assembly:directory-->
     <build>
