typo fixes and remove deletion of debs that never worked in the first place

--- a/ansible/playbooks/deploy_fds_ec2.yml
+++ b/ansible/playbooks/deploy_fds_ec2.yml
@@ -61,7 +61,7 @@
 
     tasks:
  
-    -   name: set varaible build defined in inventory file (release or debug)
+    -   name: set variable build defined in inventory file (release or debug)
         set_fact:
             build: "{{ fds_build if fds_build is defined else 'debug' }}"
         tags:
