fix logic for local deb deploys to either EC2 or defined cluster. also made fds-deps install latest instead of purging every time. It's annoying and slow.

--- a/ansible/tasks/deploy_fds/install_deps.yml
+++ b/ansible/tasks/deploy_fds/install_deps.yml
@@ -59,17 +59,10 @@
     tags:
       - install-deps
 
--   name: uninstall fds-deps
-    apt: name=fds-deps
-        state=absent
-        purge=yes
-    tags:
-        - uninstall
-
 -   name: install fds-deps package
     apt: name=fds-deps
         force=yes
-        state=present
+        state=latest
         update_cache=yes
     tags:
         - install-deps
