Removed old code and some much needed restructuring

--- a/source/data-mgr/dm-lib/dm-vol-cat/Makefile
+++ b/source/data-mgr/dm-lib/dm-vol-cat/Makefile
@@ -11,7 +11,7 @@ user_cpp          := \
 	DmVcCache.cpp \
 	DmExtentTypes.cpp \
 	DmVolumeCatalog.cpp \
-	DmPersistVc.cpp \
+	DmPersistVolCat.cpp \
 	DmPersistVolDB.cpp \
 	DmOIDArrayMmap.cpp \
 	DmPersistVolFile.cpp
