--- a/source/java/pom.xml
+++ b/source/java/pom.xml
@@ -35,6 +35,12 @@
         </repository>
     </repositories>
     <dependencies>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-platform</artifactId>
+            <version>2.1.5</version>
+        </dependency>
+
         <!-- JPA providers -->
         <dependency>
             <groupId>com.objectdb</groupId>
